# frog

./: .gitmodules  .travis.yml  README.md  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/chronocam/atis/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/paris/neuromorphic/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 13-05-19.signatures  fixed-20180216.prototypes  fixed-20180427-bg4-300-dn10000-5-2.signatures  standard_new.bias
app/src/main/cpp/: android_sepia.hpp  eventprocessor.cpp  eventprocessor.hpp  eventprocessor1L.cpp  eventprocessor1L.hpp  eventprocessor_wrap.cpp  plasma.c
app/src/main/java/com/example/chronocam/atis/: CameraPollingThread.java  CameraPreview.java  CameraPreviewTimer.java  CameraService.java  CameraView.java  ChangeDetection.java  Eventprocessor.java  IS_Usb.java  IV_USB.java  (+6 more)
app/src/main/java/com/paris/neuromorphic/: CameraPollingThread.java  CameraPreviewTimer.java  CameraService.java  CameraView.java  Eventprocessor.java  FilePollingThread.java  MainActivity.java  ProcessingThread.java  ToExchange.java  Util.java
app/src/main/jni/: Android.mk  Application.mk  eventprocessor1L.cpp  eventprocessor1L.hpp  eventprocessor_wrap.cpp
app/src/main/res/drawable/: text_background_underline.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: device_filter.xml
app/src/test/java/com/paris/neuromorphic/: ActivityTest.java  ServiceTest.java  UsbUnitTest.java
(+5 files in other folders)
